chore: remove unnused import fix: implement builder pattern on InscriptionEntity